--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - "8086:8086"
     volumes:
       - /media/usb/influxdb:/data
-      - ./conf/influxdb.conf:/etc/influxdb/influxdb.conf
+      - ./config/influxdb.conf:/etc/influxdb/influxdb.conf
     environment:
       - ADMIN_USER=root
       - INFLUXDB_INIT_PWD=root
@@ -34,5 +34,5 @@ services:
     volumes:
       - /var/grafana:/var/lib/grafana
       - /var/log/grafana:/var/log/grafana
-      - ./conf/grafana.ini:/etc/grafana/grafana.ini
+      - ./config/grafana.ini:/etc/grafana/grafana.ini
     container_name: grafana
